<resources>
    <string name="app_name" translatable="false">Gas Stations Finder</string>
    <string name="title" translatable="false">Gas Stations Finder </string>
    <string name="my_location">My location</string>
    <string name="find_stations">Find stations</string>
    <string name="open">Opened</string>
    <string name="closed">Closed</string>
    <string name="no_address">No address</string>
    <string name="no_location">Location not selected!</string>
    <string name="no_internet">No internet connection!</string>
    <string name="location_off">Location off, do you want to turn it on?</string>
    <string name="yes">Yes</string>
    <string name="close">Close</string>
    <string name="no_location_permission">Location permissions not granted, app won\'t work!</string>
    <string name="settings">Settings</string>
    <string name="allow">Allow</string>
    <string name="map">Map</string>
    <string name="search_radius">Search radius</string>
    <string name="show_radius">Show search radius</string>
    <string name="dark_mode">Dark mode</string>
    <string name="display">Display</string>
    <string name="go_to_map">Go to map</string>
    <string name="saved_places">Saved places</string>
    <string name="saved_stations">Saved stations</string>
    <string name="saved_locations">Saved locations</string>
    <string name="saved_location">Saved location!</string>
    <string name="location_exists">This location is already saved</string>
</resources>