<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/map">

        <EditTextPreference
            android:defaultValue="5000"
            android:inputType="numberDecimal"
            android:key="searchRadius"
            android:singleLine="true"
            android:title="@string/search_radius" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/display">

        <SwitchPreferenceCompat
            android:key="showCircle"
            android:defaultValue="true"
            android:title="@string/show_radius" />

        <SwitchPreferenceCompat
            android:key="darkMode"
            android:title="@string/dark_mode"
            android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>